# pipe-enumerator

./: LICENSE  README.md  pipe-enumerator.cabal
src/Pipes/: Enumerator.lhs
